--- a/Module VIPER.xctemplate/TemplateInfo.plist
+++ b/Module VIPER.xctemplate/TemplateInfo.plist
@@ -44,22 +44,8 @@
 			<key>Type</key>
 			<string>static</string>
 		</dict>
-		<dict>
-			<key>Identifier</key>
-			<string>InputOutput</string>
-			<key>Name</key>
-			<string>Divide Interactor protocol (Input &amp; Output)</string>
-			<key>Description</key>
-			<string>Divide Interactor protocol (Input &amp; Output)</string>
-			<key>Type</key>
-			<string>checkbox</string>
-			<key>Default</key>
-			<string>false</string>
-			<key>NotPersisted</key>
-			<true/>
-		</dict>
 	</array>
 	<key>Template Author</key>
-	<string>Juanpe Catalán - @JuanpeCMiOS</string>
+	<string>noppefoxwolf</string>
 </dict>
 </plist>
